--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.2",
     "eslint-plugin-only-warn": "^1.0.2",
     "react": "^17.0.1",
+    "react-bootstrap-carousel": "^4.1.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "sass": "^1.32.8",
+    "tailwindcss": "^2.0.3",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
